--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Your gffdgdf",
   "license": "MIT",
   "dependencies": {
-    "requests": "^2.7.0",
+    "requests": "12.7.0",
     "numpy": "^1.21.2",
     "matplotlib": "^3.4.3",
     "allegro/yellow": "9.17.8"
