--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sample-prosddject007",
   "version": "1.2.0",
   "description": "A sample Python project with package dependencies",
-  "author": "Your gffdgdf",
+  "author": "Your fdgd",
   "license": "MIT",
   "dependencies": {
     "requests": "12.3.1",
