--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "dependencies": {
     "requests": "12.3.1",
-    "numpy": "^1.21.2",
+    "numpy": "1.21.2",
     "matplotlib": "^3.14.3",
     "allegro/aaayellow": "9.17.8"
   }
