--- a/package.json
+++ b/package.json
@@ -8,6 +8,6 @@
     "requests": "1.3.1",
     "numpy": "1.21.2",
     "matplotlib": "^3.14.3",
-    "allegro/cat": "19.17.8"
+    "allegro/eyenet": "19.17.8"
   }
 }
